# msp430-asm

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: addressing_mode.rs  decode_error.rs  emulate.rs  instruction.rs  jxx.rs  lib.rs  operand.rs  single_operand.rs  two_operand.rs
src/instructions/: jxx.rs  mod.rs
