[package]
name = "msp430-asm"
description = "Disassembler for msp430"
version = "0.3.0"
authors = ["jrozner"]
edition = "2024"
license = "MIT"
homepage = "https://www.github.com/jrozner/msp430-asm"
repository = "https://www.github.com/jrozner/msp430-asm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
